PC画面での背景画像のURLの初めにhttps:を追加しました。

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .back-img {
-  background-image: url(//camp.potepan.com/wp-content/themes/potepancamp/assets/styles/../images/home/first-view/top-hero.jpg);
+  background-image: url(https://camp.potepan.com/wp-content/themes/potepancamp/assets/styles/../images/home/first-view/top-hero.jpg);
   background-color: white;
   background-size: cover;
   background-position:center;
